Add Spark parity tests with golden file approach
Implement cross-module golden file testing to verify ProtoCatalyst's
serialization output matches Spark's ExpressionEncoder byte-for-byte:

- GoldenFileGenerator: Extracts Spark's InternalRow output to JSON
  with Base64-encoded binary data (UTF8String bytes, etc.)
- Golden files for: Simple, Address, Person, Team, WithCollections, Complex
- SparkParitySuite: Compares ProtoCatalyst output against golden files
- Recursive comparison for nested structs, arrays, and maps

Verifies parity for:
- Primitives (Int, Long, Double, String)
- Nested structs (Person with Address)
- Collections (List[String], Map[String, Double])
- Collections of custom types (List[Person])
- Option types and temporal types (Instant)

All 6 parity tests pass, confirming byte-identical output.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>